# GlowBack

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  design.md  docker-compose.yml  glowback_runtime.py  mkdocs.yml
.cargo/: config.toml
.cursor/rules/: architecture-guide.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  dashboard.yml  docs-guard.yml  docs-smoke.yml  docs.yml  python-wheels.yml  release.yml  rust.yml
api/: README.md
api/app/: adapter.py  auth.py  errors.py  experiment_registry.py  main.py  models.py  optimization_models.py  optimization_runtime.py  optimization_store.py  rate_limit.py  store.py
api/tests/: test_backtest_adapter.py  test_experiment_registry.py  test_optimization_api.py  test_optimization_runtime.py  test_run_manifest.py  test_v1_api_contract.py
crates/gb-data/: Cargo.toml
crates/gb-data/src/: cache.rs  catalog.rs  lib.rs  loaders.rs  providers.rs  sources.rs  storage.rs  validation.rs
crates/gb-engine/: Cargo.toml
crates/gb-engine/benches/: strategy_context.rs
crates/gb-engine/examples/: strategy_lifecycle_template.rs
crates/gb-engine/src/: engine.rs  execution.rs  lib.rs  simulator.rs
crates/gb-live/: Cargo.toml
crates/gb-live/src/: broker.rs  engine.rs  lib.rs  paper.rs  risk.rs
crates/gb-optimizer/: Cargo.toml
crates/gb-optimizer/src/: lib.rs  ray.rs  search.rs  trial.rs
crates/gb-options/: Cargo.toml
crates/gb-options/src/: chain.rs  contract.rs  execution.rs  greeks.rs  lib.rs  pricing.rs
crates/gb-python/: Cargo.toml  build.rs  pyproject.toml
crates/gb-python/src/: lib.rs
crates/gb-risk/: Cargo.toml
crates/gb-risk/src/: alerts.rs  lib.rs  metrics.rs  monitor.rs
crates/gb-types/: Cargo.toml
crates/gb-types/examples/: basic_usage.rs
crates/gb-types/src/: backtest.rs  errors.rs  lib.rs  market.rs  orders.rs  portfolio.rs  strategy.rs
crates/gb-types/tests/: accounting_invariants.rs
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  types.ts
dashboard/src/components/: DrawdownChart.tsx  EquityCurveChart.tsx  Layout.tsx  MetricsGrid.tsx  StateBadge.tsx
dashboard/src/pages/: BacktestDetail.tsx  BacktestList.tsx  NewBacktest.tsx
data/: aapl_ticker.csv
docker/: api.Dockerfile  engine.Dockerfile  ui.Dockerfile
docs/: architecture.md  assumptions-and-limitations.md  changelog.md  contributing.md  dashboard.md  deployment.md  faq.md  getting-started.md  index.md  options.md  performance.md  releasing.md  roadmap.md
docs/api/: fastapi.md  python.md  rust.md
docs/community/: code-of-conduct.md  security.md
docs/concepts/: core-concepts.md  data-model.md  execution-model.md  optimization.md  results-metrics.md  security.md
docs/examples/: index.md
docs/tutorials/: alpha-vantage.md  csv-data.md  notebook.md  reproducing-a-run.md  strategy-templates.md  ui-workflow.md
examples/: csv_data_tutorial.py  python_sdk_parameter_sweep.py  python_sdk_quickstart.py  replay_manifest_tutorial.py
examples/data/: AAPL_1d.csv
scripts/: benchmark_report.py  csv_data_tutorial.sh  package-engine-release.sh  python_sdk_quickstart.sh  python_sdk_wheel_smoke.sh  quickstart.sh  replay_manifest_tutorial.sh  run-engine-benchmarks.sh
ui/: README.md  app.py  backtest_core.py  config.py  pyproject.toml  requirements.txt  research_registry.py  setup.py  utils.py
ui/examples/: lifecycle_strategy.py
ui/pages/: __init__.py  advanced_analytics.py  backtest_runner.py  data_loader.py  portfolio_analyzer.py  results_dashboard.py  strategy_editor.py
ui/tests/: test_backtest_core.py  test_research_registry.py
