[workspace]
members = [
    "crates/gb-engine",
    "crates/gb-data", 
    "crates/gb-types",
    "crates/gb-python"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow = "55.2"
parquet = "55.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
num-traits = "0.2"
rust_decimal = { version = "1.33", features = ["serde"] }
pyo3 = { version = "0.20", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

 