[project]
name = "ui"
version = "0.1.0"
description = "Glowback UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "plotly>=5.17.0",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
    "ruff>=0.12.5",
    "streamlit>=1.35.0",
    "streamlit-ace>=0.1.1",
    "streamlit-option-menu>=0.3.6",
]
