[package]
name = "gb-engine"
version = "0.1.0"
edition = "2021"
description = "GlowBack backtesting engine"

[[bin]]
name = "gb-engine-service"
path = "src/bin/engine_service.rs"

[dependencies]
gb-types = { path = "../gb-types" }
gb-data = { path = "../gb-data" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
rust_decimal = { workspace = true }

# Additional dependencies for engine implementation
rand = "0.8"
rand_chacha = "0.3" 