[package]
name = "gb-engine"
version = "0.1.0"
edition = "2021"
description = "GlowBack backtesting engine"

[[bin]]
name = "gb-engine-service"
path = "src/bin/engine_service.rs"

[dependencies]
gb-types = { path = "../gb-types" }
gb-data = { path = "../gb-data" }
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "strategy_context"
harness = false
