[package]
name = "gb-options"
version = "0.1.0"
edition = "2021"
description = "Options pricing, greeks, and execution for GlowBack"

[dependencies]
gb-types = { path = "../gb-types" }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1.37"
