[package]
name = "gb-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for GlowBack"

[lib]
name = "glowback"
crate-type = ["cdylib"]

[dependencies]
gb-types = { path = "../gb-types" }
gb-data = { path = "../gb-data" }
gb-engine = { path = "../gb-engine" }
pyo3 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true } 