[package]
name = "gb-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for GlowBack"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[lib]
name = "glowback"
crate-type = ["cdylib", "rlib"]

[dependencies]
gb-types = { path = "../gb-types" }
gb-data = { path = "../gb-data" }
gb-engine = { path = "../gb-engine" }
pyo3 = { version = "0.29", features = ["auto-initialize", "abi3-py310", "experimental-inspect"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
num-traits = { workspace = true }
