[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "glowback"
version = "0.1.0"
description = "Python bindings for GlowBack"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
]
