[package]
name = "gb-types"
version = "0.1.0"
edition = "2021"
description = "Core types and data structures for GlowBack"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
arrow = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
gb-data = { path = "../gb-data" }
tokio = { workspace = true }

[[example]]
name = "basic_usage" 