[package]
name = "gb-types"
version = "0.1.0"
edition = "2021"
description = "Core types and data structures for GlowBack"

[dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
arrow = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
rust_decimal_macros = "1.37"
gb-data = { path = "../gb-data" }
tokio = { workspace = true }

[[example]]
name = "basic_usage" 