[package]
name = "gb-types"
version = "0.1.0"
edition = "2021"
description = "Core types and data structures for GlowBack"

[dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1.37"
gb-data = { path = "../gb-data" }
tokio = { workspace = true }
rand = { workspace = true }

[[example]]
name = "basic_usage" 